# designPatternsCpp

./: .gitignore  README.md
FactoryPattern/: Application.cpp  Document.cpp  MyApplication.cpp  MyDocument.cpp  main.cpp
HelloWorld/: HelloWorld.cpp
Singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h  main.cpp  unitTest.cpp
